# npc-trainer

./: README.md  myproject.toml  pyproject.toml  setup.py
npc_trainer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/NpcTrainerAI/: chat.py  main.py  pipeline.py  processor.py  training.py
src/myprojectjv/: data.pth
src/npc-ai-trainer/: chat.py  data.pth  pipeline.py  processor.py
src/npc-trainer/: chat.py  main.py  pipeline.py  processor.py  training.py
src/npc_trainer/: main.py  model.py
