[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NpcTrainerAI"
version = "0.0.1"
authors = [
  { name="James Vovos", email="james.vovos@gmail.com" },
]
description = "Package to train AI NLP language model for dynamic NPCs in games."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]