[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NpcTrainerAI"
version = "0.0.5"
authors = [
  { name="James Vovos", email="james.vovos@gmail.com" },
]
description = "Package to train AI NLP language model for dynamic NPCs in games."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
spacy = "^3.2.0"
torch = "^1.9.0"
requests = "^2.26.0"
pandas = "^1.3.3"
